[package]
name = "cargo-mirrorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.11"
flate2 = { version = "1.0.31", features = ["zlib-ng"] }
reqwest = "0.12.5"
tar = "0.4.41"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "std"] }
walkdir = "2.5.0"
