[package]
name = "cargo-mirrorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.11", features = ["derive"] }
flate2 = { version = "1.0.31", features = ["zlib-ng"] }
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http2", "server"] }
hyper-util = "0.1.7"
parking_lot = "0.12.3"
rayon = "1.10.0"
reqwest = "0.12.5"
sonic-rs = "0.3.10"
tar = "0.4.41"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "std"] }
walkdir = "2.5.0"
